# portfolio-advisor

./: .env.example  .gitignore  LICENSE  README.md
backend/sec_rag/: README.md  app.py  chunking.py  eval_results_150q.json  eval_results_150q_v2.json  eval_results_20q.json  ingest_chroma.py  ingest_chroma_subset.py  ingest_s3vectors.py  ingest_s3vectors_subset.py  paths.py  prune_knowledge_base.py  pyproject.toml  retrieval.py  run_retrieval_eval.py  run_retrieval_eval_s3.py  test_accuracy.py  test_local_chunks.py  test_retrieval_benchmark.py
backend/sec_rag/evaluation/: eval.py  evaluator.py  retrieval_backends.py  retrieval_metrics.py  test.py  tests.json  tests_full.json
backend/sec_rag/implementation/: answer.py  fetch_filings.py  ingest.py  sp500_tickers.py
backend/sec_rag/knowledge-base/communication_services/CMCSA/: 2022_10-K.md  2023_10-K.md  2024_10-K.md  2025_10-K.md  2026_10-K.md
backend/sec_rag/knowledge-base/communication_services/DIS/: 2023_10-K.md  2024_10-K.md  2025_10-K.md
backend/sec_rag/knowledge-base/communication_services/GOOGL/: 2022_10-K.md  2023_10-K.md  2024_10-K.md  2025_10-K.md  2026_10-K.md
backend/sec_rag/knowledge-base/communication_services/META/: 2022_10-K.md  2023_10-K.md  2024_10-K.md  2025_10-K.md  2026_10-K.md
backend/sec_rag/knowledge-base/communication_services/NFLX/: 2022_10-K.md  2023_10-K.md  2024_10-K.md  2025_10-K.md  2026_10-K.md
backend/sec_rag/knowledge-base/communication_services/T/: 2022_10-K.md  2023_10-K.md  2024_10-K.md  2025_10-K.md  2026_10-K.md
backend/sec_rag/knowledge-base/energy/COP/: 2022_10-K.md  (+4 more)
(+574 files in other folders)
