[project]
name = "sec-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.1",
    "python-dotenv>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
chroma = [
    "chromadb>=0.5.0",
    "openai>=1.0.0",
    "litellm>=1.0.0",
    "tenacity>=9.0.0",
    "langchain-text-splitters>=0.3.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
]
